# src/controllers/question.ts
@@ -7,7 +7,7 @@ import { RequestForProtectedRoute } from './../interfaces/common';
 import { Question } from './../models/question';
 import { Quiz } from './../models/quiz';
 import { httpStatusCode } from './../utils/responseHandler';
-
+let swagger: any = {};
 export async function saveQuestionsForTheQuiz(
 	req: RequestForProtectedRoute,
 	res: Response,
@@ -15,6 +15,7 @@ export async function saveQuestionsForTheQuiz(
 ) {
 	let questionsData = req.body.questionsData;
 	try {
+		// Req Body validations
 		if (
 			!(
 				Array.isArray(questionsData) &&
@@ -31,11 +32,58 @@ export async function saveQuestionsForTheQuiz(
 				'Something went wrong while saving the questions into db. Please try again'
 			);
 		res.status(httpStatusCode.created).json({
-			status: 'success',
-			questions: questionsList
+			status: 'success'
 		});
 	} catch (error) {
 		next(error);
+		//--------------Implementaion part is done ---------------------
+
+		//! Swagger docs
+		/*
+		#swagger.tags = ['Question'];
+		#swagger.description = 'Endpoint to save a question in the db';
+		#swagger.security = [
+			{
+				apiKeyAuth: []
+			}
+		];
+
+		#swagger.parameters['obj'] = {
+			in: 'body',
+			description: 'Question Data',
+			required: true,
+			schema: {
+				$questionText: 'Question Title',
+				$questionType: { $ref: '#/definitions/QuestionType' },
+				$quizzes: ['629ca5720cf3c0efda1644b2'],
+				$options: ['option 1', 'option 2'],
+				$answers: ['0','1'],
+			}
+		};
+
+		#swagger.responses[201] = {
+			description: 'Questions are saved successfully.',
+			schema: {
+				$status: 'success'
+			}
+		};
+		#swagger.responses[400] = {
+			description: 'When there is something wrong with request body.',
+			schema: {
+				$status: 'fail',
+				$error:
+					'Payload is not in required format. Please check and try again'
+			}
+		};
+		#swagger.responses[500] = {
+			description: 'When there is something with server',
+			schema: {
+				$status: 'fail',
+				$error:
+					'Something went wrong while saving the questions into db. Please try again'
+			}
+		}; 
+		 */
 	}
 }
 
@@ -48,21 +96,22 @@ export async function getAllQuestionsOfAQuiz(
 	const user = req.user;
 	let shouldOnlyGiveTotalNoOfQuestion = false;
 	try {
+		// validation of params
 		if (!isValidMongoObjectId(quizId))
 			throw createAnError('Please give a valid quiz id', 400);
+
 		let quizData = await Quiz.findById(quizId, {
 			_id: 0,
 			enrolledBy: 1,
 			createdBy: 1,
 			marks: 1
 		}).lean();
-		console.log(quizData);
 		if (!quizData)
 			throw createAnError(
 				'Quiz is not found in db',
 				httpStatusCode.notFound
 			);
-		if (isUserAlreadyGivenQuiz(quizData?.marks, user._id))
+		if (isUserAlreadyGivenQuiz(quizData.marks, user._id))
 			throw createAnError(
 				'User already given this quiz',
 				httpStatusCode.forbidden
@@ -95,7 +144,7 @@ export async function getAllQuestionsOfAQuiz(
 				'Something went wrong while fetching questions from DB'
 			);
 		// Hiding the answer if user is not owner of the quiz
-		if (quizData?.createdBy?.toString() !== user._id?.toString()) {
+		if (quizData.createdBy.toString() !== user._id.toString()) {
 			questionsList = questionsList?.map((question) => {
 				return { ...question, answers: [] };
 			});
@@ -103,7 +152,7 @@ export async function getAllQuestionsOfAQuiz(
 		if (shouldOnlyGiveTotalNoOfQuestion)
 			return res.status(httpStatusCode.ok).json({
 				status: 'success',
-				totalQuestions: questionsList?.length
+				totalQuestions: questionsList.length
 			});
 		return res.status(httpStatusCode.ok).json({
 			status: 'success',
@@ -111,14 +160,64 @@ export async function getAllQuestionsOfAQuiz(
 		});
 	} catch (error) {
 		next(error);
+		//! Swagger docs
+		/*
+		#swagger.tags = ['Question'];
+		#swagger.description = 'Endpoint to getting all the questions of a quiz';
+		#swagger.security = [
+			{
+				apiKeyAuth: []
+			}
+		];
+
+		#swagger.parameters['quizId'] = {
+			in: 'query',
+			description:
+				'Quiz ID for which you want to retrieve all its questions',
+			required: true,
+			type: 'string'
+		};
+
+		#swagger.responses[200] = {
+			description: 'Questions are saved successfully. 
+			There will be 3 type of responses on basis of role and owner of the quiz.',
+			schema: {
+				$status: 'success',
+				questions: {
+					$ref: '#/definitions/Question'
+				}
+			}
+		};
+		#swagger.responses[400] = {
+			description: 'When quiz id is a valid quiz id',
+			schema: {
+				$status: 'fail',
+				$error: 'Please give a valid quiz id'
+			}
+		};
+		#swagger.responses[404] = {
+			description: 'When quiz id is not found in db',
+			schema: {
+				$status: 'fail',
+				$error: 'Quiz is not found in db'
+			}
+		};
+		#swagger.responses[500] = {
+			description: 'When there is something with server',
+			schema: {
+				$status: 'fail',
+				$error: 'Something went wrong while fetching questions from DB'
+			}
+		};
+		*/
 	}
 }
 
-// NEED TO DELATE
-function delayForGivenTime(time: number) {
-	return new Promise((res, rej) => {
-		setTimeout(() => {
-			res(24);
-		}, time);
-	});
-}
+// It is required only for testing
+// function delayForGivenTime(time: number) {
+// 	return new Promise((res, rej) => {
+// 		setTimeout(() => {
+// 			res(24);
+// 		}, time);
+// 	});
+// }
